# Sentinel-of-sentinel-s-Forge

./: .dockerignore  .gitignore  .markdownlint.json  CHECKLIST.md  CLAUDE.md  Dockerfile  MIT License  Makefile  README.md  README.md.bak  client.py  dashboard.py  demo_ui.py  docker-compose.yml  main.py  quantum_nexus_forge_v5_2_enhanced.py  quantum_nexus_forge_v5_2_enhanced.py.txt  requirements.txt  sentinel_cognition.py  sentinel_profile.py  sentinel_skills.py  sentinel_sync.py  sigma_network_engine.py  sqa_bridge.py  vector_utils.py  ~$README.md
.github/: copilot-instructions.md
backend/: __init__.py  api.py  error_handler.py  eventbus.py  main.py  middleware.py  mock_adapter.py  models.py  schemas.py  security.py  service.py  storage.py  ws_api.py
data/: glyphs_pack.json  seed.json
docs/: API.md  API_EXAMPLES.md  AUTOMATION_OPERATIONS.md  COMPLETENESS_ASSESSMENT.md  FINAL_ACCEPTANCE_READINESS.md  GIT_WORKFLOW.md  INTERDEPARTMENTAL_COMPLETION_MEMO.md  MEMO_TO_CLAUDE.md  MEMO_TO_VR_STUDIOS_ASSISTANT.md  PARTNER_ENV_EXECUTION_CHECKLIST.md  PLATFORM_READINESS_MEMO.md  QUICKSTART.md  README.md  RELEASE_PIPELINE.md  ROADMAP.md  SDLC_TOOLS_SKILLS_BLUEPRINT.md  THIRD_PARTY_LICENSES.md  TROUBLESHOOTING.md  USER_GUIDE.md  VR_STUDIOS_DATA_NODE.md  VR_STUDIOS_FINAL_HANDOFF_REPORT.md  env_setup.md
evaluation/: HANDOFF_TO_CLAUDE.ipynb  collect_responses.py  run_evaluation.py  (+2 more)
sqa/: CMakeLists.txt
sqa/bindings/: sqa_module.cpp
sqa/config/: sqa_default.json
sqa/src/: common.h  config_loader.cpp  config_loader.h
sqa/src/a1fs/: a1_filing_system.cpp  a1_filing_system.h  consolidation_engine.cpp  consolidation_engine.h  knowledge_vault.cpp  knowledge_vault.h  memory_node.cpp  memory_node.h
sqa/src/cno/: appraisal_engine.cpp  appraisal_engine.h  attention_module.cpp  attention_module.h  cognitive_neural_overlay.cpp  cognitive_neural_overlay.h  creativity_engine.cpp  creativity_engine.h  symbolic_processor.cpp  symbolic_processor.h
sqa/src/nns/: feedback_controller.cpp  feedback_controller.h  nexus_node_stack.cpp  nexus_node_stack.h  processing_node.cpp  processing_node.h
sqa/tests/: test_a1fs.cpp  test_cno.cpp  test_config.cpp  test_nns.cpp
(+165 files in other folders)
